--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,5 +20,12 @@
         android:layout_height="wrap_content"
         android:text="다이얼로그 클릭" />
 
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Fragment" />
+
+
 
 </androidx.appcompat.widget.LinearLayoutCompat>
