--- a/permissions/src/main/res/values/styles.xml
+++ b/permissions/src/main/res/values/styles.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
 
-    <style name="TransparentTheme" parent="Theme.AppCompat.Light.DarkActionBar" >
-        <item name="windowActionBar">false</item>
-        <item name="background">@android:color/transparent</item>
+    <style name="Theme.Transparent.SimplePermissions" parent="Theme.AppCompat.Light.NoActionBar" >
+        <item name="android:windowIsTranslucent">true</item>
         <item name="android:windowBackground">@android:color/transparent</item>
-        <item name="windowNoTitle">true</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:backgroundDimEnabled">false</item>
+
+        <item name="android:windowActionBar">false</item>
+        <item name="windowActionBar">false</item>
         <item name="android:windowNoTitle">true</item>
-        <item name="android:windowLightStatusBar" tools:ignore="NewApi">false</item>
-        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="windowNoTitle">true</item>
     </style>
 
     <style name="PermissionsDialog" parent="Theme.AppCompat.Dialog.Alert">
