fix: 권한 로직 전면 수정 - 권한 거부시 설정 페이지 이동 처리 함수 Deprecated 처리 (권한 허용중인 권한을 거부를 했을경우 콜백을 받는 리스너가 Null 로 처리가 되서 그냥 사용자가 직접 처리하는 방향으로 변경)

--- a/app/src/main/res/layout/activity_example.xml
+++ b/app/src/main/res/layout/activity_example.xml
@@ -7,4 +7,17 @@
     android:id="@+id/fragment"
     tools:context=".ExampleActivity">
 
+    <androidx.appcompat.widget.LinearLayoutCompat
+        android:layout_width="match_parent"
+        android:layout_gravity="center"
+        android:layout_height="wrap_content">
+
+        <Button
+            android:id="@+id/button1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="권한 버튼 클릭" />
+
+    </androidx.appcompat.widget.LinearLayoutCompat>
+
 </FrameLayout>
